--- a/public_html/css/backend.css
+++ b/public_html/css/backend.css
@@ -1,3 +1,30 @@
 body{padding-bottom:40px;}
 .field-errors{color:#A94442}
 .field-errors ul{margin-left:0px;padding-left:15px}
+
+/** Backend Blog  START **/
+#blogCreationForm textarea{display:block;height:150px;width:300px;}
+#blogCreationForm .form-element div,#blogCreationForm h1{margin-bottom:30px;}
+#blogCreationForm #tagContainer li label,#blogCreationForm #tagContainer li{cursor:pointer;}
+/** Backend Blog END **/
+
+.field-errors{color:#A94442}
+.field-errors ul{margin-left:0px;padding-left:15px}
+
+.selectbox{background:#ffffff;color:#333333;padding:8px;line-height:18px;cursor:pointer;border:1px solid #ddd;border-width:0 1px 4px 1px;}
+.selectbox .caret{position:relative;top:-2px;}
+.selectbox span{padding-left:3px;}
+
+/** Applications START**/
+.applicationsTable .filled{background:#f9f2f4;border:1px solid #000000;}
+/** Applications END**/
+
+/** MULTI LEVEL DROPDOWN **/
+.dropdown-submenu{position:relative;}
+.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px;border-radius:0 6px 6px 6px;}
+.dropdown-submenu:hover>.dropdown-menu{display:block;}
+.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#ccc;margin-top:5px;margin-right:-10px;}
+.dropdown-submenu:hover>a:after{border-left-color:#fff;}
+.dropdown-submenu.pull-left{float:none;}
+.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
+/** MULTI LEVEL DROPDOWN END **/
