--- a/module/Front/view/front/index/home.phtml
+++ b/module/Front/view/front/index/home.phtml
@@ -24,13 +24,13 @@ $com = $this->Communicator();
          <div id="loader"><img src="<?php echo $this->basePath('img/loader.gif') ?>"> 
          <?php echo $this->translate('please_wait') ?></div>
 
-         <div class="form-control required large <?php $com->printErrorClass('email'); ?>">
+         <div class="form-control-2 required large <?php $com->printErrorClass('email'); ?>">
             <label><?php echo $this->translate('Email address')?>*</label>
             <input type="text" id="email" name="email" value="<?php echo $this->escapeHtml($this->email) ?>" required="required">
             <?php $com->printFieldErrors('email'); ?>
          </div>
          
-         <div id="instance_container" class="form-control required <?php $com->printErrorClass('instance'); ?>">
+         <div id="instance_container" class="form-control-2 required <?php $com->printErrorClass('instance'); ?>">
             <label><?php echo $this->translate('Instance name')?>*</label>
             <input disabled="disabled" 
                 type="text" 
@@ -46,32 +46,32 @@ $com = $this->Communicator();
             <?php $com->printFieldErrors('instance'); ?>
          </div>
 
-         <div class="form-control required <?php $com->printErrorClass('password'); ?>">
+         <div class="form-control-2 required <?php $com->printErrorClass('password'); ?>">
             <label><?php echo $this->translate('Password')?>*</label>
             <input type="password" name="password" required="required">
             <?php $com->printFieldErrors('password'); ?>
          </div>
 
-         <div class="form-control required large <?php $com->printErrorClass('first_name'); ?>">
+         <div class="form-control-2 required large <?php $com->printErrorClass('first_name'); ?>">
             <label><?php echo $this->translate('First name')?>*</label>
             <input type="text" name="first_name" value="<?php echo $this->escapeHtml($this->first_name) ?>" required="required">
             <?php $com->printFieldErrors('first_name'); ?>
          </div>
 
-         <div class="form-control required large <?php $com->printErrorClass('last_name'); ?>">
+         <div class="form-control-2 required large <?php $com->printErrorClass('last_name'); ?>">
             <label><?php echo $this->translate('Last name')?>*</label>
             <input type="text" name="last_name" value="<?php echo $this->escapeHtml($this->last_name) ?>" required="required">
             <?php $com->printFieldErrors('last_name'); ?>
          </div>
          
-         <div class="form-control required <?php $com->printErrorClass('logo'); ?>">
+         <div class="form-control-2 required <?php $com->printErrorClass('logo'); ?>">
             <label><?php echo $this->translate('Logo')?></label>
             <input type="file" name="logo" />
             <div style="font-size:12px;margin;margin-left:170px">Only images in the wollowing formats jpg,png</div>
             <?php $com->printFieldErrors('logo'); ?>
          </div>
 
-         <div id="submit" style="margin-top:10px">
+         <div class="form-control-2" id="submit" style="margin-top:10px">
             <input type="submit" value="<?php echo $this->translate('Create account')?>">
             <button type="button" onclick="window.history.back();"><?php echo $this->translate('Cancel')?></button>
          </div>
