--- a/module/Front/view/front/index/home.phtml
+++ b/module/Front/view/front/index/home.phtml
@@ -18,7 +18,7 @@ $com = $this->Communicator();
    
       <h2><?php echo $this->translate('Create Account')?> <span><?php echo $this->translate('Please fill in all required fields *') ?></span></h2>
       
-      <form method="post" action="<?php echo $this->url('home') ?>" id="form_element" enctype="multipart/form-data">
+      <form method="post" action="<?php echo $this->url('home') ?>?type=<?php echo $this->type?>" id="form_element" enctype="multipart/form-data">
       
          <div id="alert"><?php $com->printMessage() ?></div>
          <div id="loader"><img src="<?php echo $this->basePath('img/loader.gif') ?>"> 
