--- a/module/Front/view/front/index/home.phtml
+++ b/module/Front/view/front/index/home.phtml
@@ -72,7 +72,7 @@ $com = $this->Communicator();
          <div class="form-control-2 required <?php $com->printErrorClass('logo'); ?>">
             <label><?php echo $this->translate('Logo')?></label>
             <input type="file" name="logo" />
-            <div style="font-size:12px;margin;margin-left:170px">Only images in the wollowing formats jpg,png</div>
+            <div style="font-size:12px;margin;margin-left:170px">Only jpg, png, svg formats</div>
             <?php $com->printFieldErrors('logo'); ?>
          </div>
 
