--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -208,6 +208,7 @@ padding-top: 15px;
 padding-right: 50px;
 line-height:30px;
 }
+footer div {margin-right:100px}
 
 /*@media (max-height: 667px){*/
     footer {
