--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -292,3 +292,8 @@ width: 260px;
 #container-body img {
 float: right;
 }
+
+#supported_formats_label{font-size:12px;float:right;margin-top:10px;margin-right:40px}
+#recommended_size_label{font-size:12px;margin-left:160px;clear:left;}
+#recommended_size_label label{color:#000;padding:0px !important;margin:0px !important;font-size:12px !important;font-weight:normal;text-align:left !important;width:auto !important}
+
