--- a/module/Front/view/front/index/thanks.phtml
+++ b/module/Front/view/front/index/thanks.phtml
@@ -11,7 +11,7 @@
 
 jQuery(function() {
     var message = "<?php echo $this->translate('freemium_account_created')?>";
-    alert(message);
+    //alert(message);
 });
 
 </script>
