--- a/module/Front/view/front/auth/login.phtml
+++ b/module/Front/view/front/auth/login.phtml
@@ -12,7 +12,12 @@ $com = $this->Communicator();
     	<form method="post" action="<?php echo $this->url('auth', array('action' => 'login')) ?>">
     	
     	    <div>
-    		    <input type="text" name="username" id="username" placeholder="Correo electrónico" class="<?php $com->printErrorClass('username')?>" />
+    		    <input 
+                        type="text" 
+                        name="username" 
+                        id="username" 
+                        placeholder="Correo electrónico" 
+                        class="<?php $com->printErrorClass('username')?>" value="<?php echo $this->escapeHtml($this->username)?>" />
     		    <?php $com->printFieldErrors('username') ?>
     		</div>
     		
