--- a/module/Backend/view/backend/sql/index.phtml
+++ b/module/Backend/view/backend/sql/index.phtml
@@ -56,6 +56,17 @@ echo $this->headScript()
             
             <div class="row"></div>
             
+            <div class="col-lg-5">
+                <div class="form-group <?php $com->printErrorClass('clear_cache')?>">
+                    <input type="checkbox" name="clear_cache" id="clear_cache" value="1" <?php echo $this->clear_cache ? 'checked="checked"' : ''?> />
+                    <label for="clear_cache">Clear cache</label>
+                    
+                    <?php $com->printFieldErrors('clear_cache') ?>
+                </div>
+            </div>
+            
+            <div class="row"></div>
+            
             <div class="col-lg-3">
                 <div class="form-group">
                     <input type="submit" value="Execute Query" class="btn btn-primary">
