--- a/module/Front/view/front/index/thanks.phtml
+++ b/module/Front/view/front/index/thanks.phtml
@@ -1,6 +1,6 @@
 
 <div id="form">
-    <h1><?php echo $this->translate('Welcome to Paradiso LMS') ?></h1>
+    <h1><?php echo $this->translate('welcome_message') ?></h1>
    
     <div id="container" style="margin-top:50px">
         <h2><?php echo $this->translate('freemium_account_created')?></h2>
