--- a/module/Front/view/front/index/home.phtml
+++ b/module/Front/view/front/index/home.phtml
@@ -10,12 +10,12 @@ $com = $this->Communicator();
 <?php $this->headStyle()->captureEnd() ?>
 
 <div id="form">
-   <h1><?php echo $this->translate('Welcome to Paradiso LMS') ?></h1>
-   <p><?php echo $this->translate('Once you complete this form, we will create an account for you. Please specify a correct email address.') ?></p>
+   <h1><?php echo $this->translate('welcome_message') ?></h1>
+   <p><?php echo $this->translate('tag_line_1') ?></p>
 
    <div id="container">
    
-      <h2><?php echo $this->translate('Create Account')?> <span><?php echo $this->translate('Please fill in all required fields *') ?></span></h2>
+      <h2><?php echo $this->translate('Create Account')?> <span><?php echo $this->translate('fill_in_required_fields') ?></span></h2>
       
       <form method="post" action="<?php echo $this->url('home') ?>?type=<?php echo $this->type?>" id="form_element" enctype="multipart/form-data">
       
