--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -106,7 +106,8 @@ margin: 0px;
 #form div h2 span {
 color: #5B5B5F;
 display: inline-block;
-padding-left: 100px;
+float: right;
+margin-right: 10px;
 }
 
 #form div form {
